Change the styles for 'empty-burger-msg'

--- a/src/components/Burger/Burger.scss
+++ b/src/components/Burger/Burger.scss
@@ -1,7 +1,6 @@
 .burger {
+  width: 500px;
   height: 300px;
   overflow: scroll;
   margin: 10px auto;
-  width: $burger-width;
-  color: $primary-color;
 }
